# web-server

./: .gitignore  CMakeLists.txt  README.md  image_adapter.c  server.c  server.h  utils.c  utils.h
cache/: cache.c  cache.h
http_parsing/: request_parser.c  request_parser.h  response_setter.c  response_setter.h
image_processing/: image_processing.c  image_processing.h  image_resizing.c  image_resizing.h
logging/: logfile  logging.c  logging.h
server/: server.c  server.h
ua_parsing/: ua_parsing.c  ua_parsing.h
ua_parsing/src/trie/: 51Degrees.c
www/: 400.html  404.html  index.html
